# geolib2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  rosdoc.yaml  tue-manifest.xml
.github/workflows/: main.yml
docs/superpowers/plans/: 2026-06-24-remove-type-punning-unions.md
docs/superpowers/specs/: 2026-06-24-remove-type-punning-unions-design.md
include/: HeightMap.h  HeightMapNode.h
include/geolib/: Box.h  CompositeShape.h  Exporter.h  HeightMap.h  HeightMapNode.h  Importer.h  Mesh.h  Octree.h  OctreeNode.h  Ray.h  Shape.h  Triangle.h  datatypes.h  math_types.h  matrix.h  serialization.h  shapes.h  visualization.h
include/geolib/io/: export.h  import.h
include/geolib/ros/: msg_conversions.h  tf2_conversions.h  tf_conversions.h
include/geolib/sensors/: DepthCamera.h  LaserRangeFinder.h
src/: Box.cpp  CompositeShape.cpp  Exporter.cpp  HeightMap.cpp  HeightMapNode.cpp  Importer.cpp  Mesh.cpp  Octree.cpp  OctreeNode.cpp  Ray.cpp  Shape.cpp  Triangle.cpp  datatypes.cpp  serialization.cpp  shapes.cpp  show.cpp  visualization.cpp
src/io/: export.cpp  import.cpp
src/ros/: msg_conversions.cpp
src/sensors/: DepthCamera.cpp  LaserRangeFinder.cpp
test/: box_test.h  test_box.cpp  test_composite_shape.cpp  test_geolib.cpp  test_geolib_jos.cpp  test_geolib_lrf.cpp  test_intersect.cpp  test_lrf.cpp  test_math_types.cpp  test_matrix.cpp  test_octree.cpp  test_shape.cpp
tools/: height_image_to_file.cpp  height_image_to_shape.cpp  show.cpp
