<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geolib2</name>
  <version>0.1.0</version>
  <description>Shape and pose library used in many TUe applications/libraries</description>

  <author email="S.v.d.Dries@tue.nl">Sjoerd van den Dries</author>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>assimp</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>

  <build_depend>code_profiler</build_depend>

  <exec_depend>code_profiler</exec_depend>

  <test_depend>catkin_lint_cmake</test_depend>

  <doc_depend>doxygen</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
